--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,10 +19,10 @@ phases:
 
   post_build:
     commands:
-      - echo 'Creating Publish folder for the app'
-      - dotnet publish -c Release -o publish
+    - echo 'Creating Publish folder for the app'
+    - dotnet publish -c Release -o publish
   
 artifacts:
   files:
     - 'Dockerfile'
-    - publish/**/*
+    - 'publish/**/*'
